src/z80asm/z80asm2/t/20-preproc/expected/repti_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/repti_01.asm
Assembling t/20-preproc/input/repti_01.asm...
t/20-preproc/input/repti_01.asm:1:6: error: Expected identifier after REPTI
    repti ; no identifier
         ^
t/20-preproc/input/repti_01.asm:2:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:3:7: error: Expected identifier after REPTI
    repti 27 ; no identifier
          ^
t/20-preproc/input/repti_01.asm:4:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:5:8: error: Expected comma after identifier in REPTI
    repti v ; no comma
           ^
t/20-preproc/input/repti_01.asm:6:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:7:9: error: Expected arguments after REPTI
    repti v, ; no arguments
            ^
t/20-preproc/input/repti_01.asm:8:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:9:13: error: Unmatched '('
    repti v, (2+3
                ^
# file: t/20-preproc/input/repti_01.asm
Identifier	"ld"	10:2	keyword=LD 
Identifier	"a"	10:5	keyword=A 
Comma	","	10:6	
Identifier	"v"	10:8	keyword=V 
EndOfLine	"\n"	10:9	
t/20-preproc/input/repti_01.asm:11:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:12:13: error: Unmatched ')'
    repti v, 2+3)
                ^
Identifier	"ld"	13:2	keyword=LD 
Identifier	"a"	13:5	keyword=A 
Comma	","	13:6	
Identifier	"v"	13:8	keyword=V 
EndOfLine	"\n"	13:9	
t/20-preproc/input/repti_01.asm:14:1: error: Unexpected ENDR directive
    endr
    ^
t/20-preproc/input/repti_01.asm:15:1: error: Unexpected end of file, missing ENDR for REPTI
    repti v, a, b, c ; no endr
    ^
